--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.env
+venv
+object_index.json
+vector_index.h5
+annoy_index.ann
+
 # dependencies
 /node_modules
 /.pnp
