--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+vector_index.h5
+.env
+
 # dependencies
 /node_modules
 /.pnp
