--- a/package.json
+++ b/package.json
@@ -11,31 +11,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.4",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
+    "@tanstack/react-query": "^4.29.15",
+    "@tanstack/react-query-devtools": "^4.29.15",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "concurrently": "^8.0.1",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
     "lucide-react": "^0.252.0",
-    "next": "13.4.4",
+    "next": "latest",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.23",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.3",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.0.4"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0"
+    "@typescript-eslint/parser": "^5.60.0",
+    "concurrently": "^8.2.0",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
