--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".eslintrc.cjs"
+    "**/*.js",
+    "**/*.cjs"
   ],
   "exclude": ["node_modules"]
 }
