--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-image-file-resizer": "^0.4.8",
     "react-responsive-masonry": "^2.1.7",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
